--- a/style2.css
+++ b/style2.css
@@ -179,6 +179,7 @@
   width: 130px;
   height: 38px;
   background-color: #f16d7f;
+  border-radius: 3px;
   border: none;
   display: flex;
   align-items: center;
@@ -209,6 +210,9 @@
 .header__right-button:hover .header__right-img {
   fill: #f16d7f;
   transition: all 0.3s;
+}
+.header__basket {
+  display: flex;
 }
 .header .header__right-details[open] .header__right-text {
   color: #f16d7f;
@@ -431,6 +435,10 @@
 }
 .navigation__container-photo {
   margin-top: 10px;
+  transition: all 0.3s;
+}
+.navigation__container-photo:hover {
+  box-shadow: 3px 3px 3px 1px grey;
 }
 .navigation__last:hover .navigation__container {
   right: 0;
@@ -464,7 +472,7 @@
   list-style-type: none;
   display: flex;
 }
-.breadcrumbs__list:not(:last-child):after {
+.breadcrumbs__list:after {
   content: "/";
   padding-left: 3px;
   padding-right: 3px;
@@ -475,14 +483,6 @@
   text-transform: uppercase;
   color: #636363;
 }
-.breadcrumbs__list:last-child .breadcrumbs__link {
-  font-family: Lato;
-  font-size: 14px;
-  line-height: 20px;
-  text-transform: uppercase;
-  font-weight: 700;
-  color: #f16d7f;
-}
 .breadcrumbs__link {
   font-family: Lato;
   font-size: 14px;
@@ -490,6 +490,18 @@
   font-weight: 300;
   text-transform: uppercase;
   color: #636363;
+  transition: all 0.3s;
+}
+.breadcrumbs .breadcrumbs__end {
+  font-family: Lato;
+  font-size: 14px;
+  line-height: 20px;
+  text-transform: uppercase;
+  font-weight: 700;
+  color: #f16d7f;
+}
+.breadcrumbs__link:hover {
+  color: #f16d7f;
 }
 
 .slider {
@@ -919,6 +931,22 @@
   background: #ffffff;
   color: #f16d7f;
   border: 1px solid #e6e6e6;
+}
+
+.pagination {
+  display: flex;
+  gap: 13px;
+}
+.pagination__link {
+  width: 38px;
+  height: 4px;
+  background-color: #d6d6d6;
+}
+.pagination-color {
+  background-color: #f16d7f;
+}
+.pagination__link:hover {
+  background-color: #f16d7f;
 }
 
 .inform {
