--- a/style4.css
+++ b/style4.css
@@ -49,6 +49,7 @@
 }
 .header__searche-details[open] .header__searche-img {
   fill: #f16d7f;
+  transform: rotate(180deg);
 }
 .header__searche-button {
   width: 87px;
@@ -450,283 +451,280 @@
   left: auto;
 }
 
-.offer {
-  background-color: #e8e8e8;
+.arrival {
+  padding-top: 65px;
+  padding-bottom: 65px;
+  background-color: #f8f3f4;
+  background-size: cover;
+  background-blend-mode: overlay;
   display: flex;
   align-items: center;
-  position: relative;
+  justify-content: space-between;
 }
-.offer__background {
-  width: 100%;
-}
-.offer__content {
-  display: flex;
-  gap: 12px;
-  align-items: center;
-  margin-top: 22px;
-  position: absolute;
-  margin-left: 0px;
-}
-.offer__stick {
-  display: block;
-  width: 12px;
-  height: 94px;
-  background-color: #f16d7f;
-}
-.offer__text-big {
+.arrival__title {
   font-family: Lato;
-  font-size: 60px;
-  line-height: 1.2;
-  font-weight: 900;
-  letter-spacing: 0.025em;
-  color: #222222;
-}
-.offer__text-small {
-  font-family: Lato;
-  line-height: 1.2;
-  font-weight: 900;
-  letter-spacing: 0.025em;
-  color: #222222;
-  font-size: 40px;
-}
-.offer_colour {
-  color: #f16d7f;
-}
-
-.categories {
-  padding-top: 98px;
-  padding-bottom: 100px;
-  display: grid;
-  grid-gap: 20px;
-  grid-template-columns: 560px 560px;
-  grid-template-rows: 261px 261px 261px;
-}
-.categories__block {
-  position: relative;
-  transition: all 0.5s;
-}
-.categories__link {
-  display: flex;
-}
-.categories_first {
-  grid-row: 1/3;
-  grid-column: 1/2;
-}
-.categories_second {
-  grid-row: 3/4;
-  grid-column: 1/2;
-}
-.categories__title {
-  position: absolute;
-  padding: 16px 18px;
-  margin-top: 26px;
-  background-color: #ffffff;
-}
-.categories__text {
-  font-family: Lato;
-  font-size: 18px;
-  line-height: 1.2;
+  font-size: 24px;
+  line-height: 20px;
   font-weight: 900;
   text-transform: uppercase;
-  letter-spacing: 0.025em;
-  color: #222222;
-}
-.categories__color {
-  font-size: 30px;
   color: #f16d7f;
 }
-.categories__block:hover {
-  filter: brightness(30%);
+
+.breadcrumbs__ul {
+  list-style-type: none;
+  display: flex;
+}
+.breadcrumbs__list:after {
+  content: "/";
+  padding-left: 3px;
+  padding-right: 3px;
+  font-family: Lato;
+  font-size: 14px;
+  line-height: 20px;
+  font-weight: 300;
+  text-transform: uppercase;
+  color: #636363;
+}
+.breadcrumbs__link {
+  font-family: Lato;
+  font-size: 14px;
+  line-height: 20px;
+  font-weight: 300;
+  text-transform: uppercase;
+  color: #636363;
+  transition: all 0.3s;
+}
+.breadcrumbs .breadcrumbs__end {
+  font-family: Lato;
+  font-size: 14px;
+  line-height: 20px;
+  text-transform: uppercase;
+  font-weight: 700;
+  color: #f16d7f;
+}
+.breadcrumbs__link:hover {
+  color: #f16d7f;
 }
 
-.future {
-  padding-bottom: 113px;
+.checkout {
+  padding-top: 89px;
+  padding-bottom: 93px;
 }
-.future__heading {
+.checkout__details {
+  border-bottom: 1px solid #e8e8e8;
+  padding-top: 33px;
+  padding-bottom: 31px;
+}
+.checkout__details[open] {
+  color: #f16d7f;
+}
+.checkout__details[open] .checkout__summary-num {
+  color: #ef5b70;
+}
+.checkout__details[open] .checkout__summary-title {
+  color: #ef5b70;
+}
+.checkout__summary {
+  display: flex;
+  gap: 10px;
+  font-family: Lato;
+  font-size: 16px;
+  line-height: 1.2;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: #222222;
+}
+.checkout__summary:hover {
+  color: #f16d7f;
+}
+.checkout__box {
+  padding: 39px 35px 79px 35px;
+  display: flex;
+  justify-content: space-between;
+}
+.checkout__guest-title {
+  font-family: Lato;
+  font-size: 13px;
+  line-height: 1.2;
+  font-weight: 400;
+  text-transform: uppercase;
+  color: #222222;
+  margin-bottom: 15px;
+}
+.checkout__guest-text {
+  font-family: Lato;
+  font-size: 13px;
+  line-height: 20px;
+  font-weight: 400;
+  color: #b3b2b2;
+}
+.checkout__radio-box {
+  display: flex;
+  gap: 20px;
+  flex-direction: column;
+  margin-top: 34px;
+  margin-bottom: 33px;
+}
+.checkout__radio {
+  display: flex;
+  gap: 14px;
+}
+.checkout__radio-input {
+  width: 14px;
+  height: 14px;
+  background-color: #ffffff;
+  border: 2px solid #555555;
+}
+.checkout__radio-label {
+  font-family: Lato;
+  font-size: 12px;
+  line-height: 1.2;
+  font-weight: 400;
+  text-transform: uppercase;
+  color: #222222;
+}
+.checkout__radio:hover .checkout__radio-label {
+  color: #f16d7f;
+}
+.checkout__guest-links {
+  display: flex;
+  gap: 15px;
+  flex-direction: column;
+  margin-top: 33px;
+  margin-bottom: 38px;
+}
+.checkout__guest-link {
+  display: flex;
+  gap: 4px;
+  align-items: center;
+}
+.checkout__guest-icon {
+  fill: #b3b2b2;
+  width: 13px;
+  height: 13px;
+}
+.checkout__guest-description {
+  font-family: Lato;
+  font-size: 13px;
+  line-height: 20px;
+  font-weight: 400;
+  color: #b3b2b2;
+}
+.checkout__guest-link:hover .checkout__guest-icon {
+  fill: #f16d7f;
+}
+.checkout__guest-link:hover .checkout__guest-description {
+  color: #f16d7f;
+}
+.checkout__guest-button {
+  background-color: #ffffff;
+  border: 1px solid #eaeaea;
+  font-family: Lato;
+  font-size: 14px;
+  line-height: 1.2;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: #4a4a4a;
+  padding: 19px 54px;
+  transition: all 0.5s;
+}
+.checkout__guest-button:hover {
+  color: #ffffff;
+  background-color: #f16d7f;
+}
+.checkout__existing-title {
+  font-family: Lato;
+  font-size: 13px;
+  line-height: 1.2;
+  font-weight: 400;
+  text-transform: uppercase;
+  color: #222222;
+  margin-bottom: 15px;
+}
+.checkout__existing-text {
+  font-family: Lato;
+  font-size: 13px;
+  line-height: 20px;
+  font-weight: 400;
+  color: #b3b2b2;
+}
+.checkout__existing-box {
+  margin-top: 27px;
+  margin-bottom: 22px;
+  display: flex;
+  flex-direction: column;
+  gap: 23px;
+}
+.checkout__existing-block {
   display: flex;
   gap: 16px;
   flex-direction: column;
-  align-items: center;
-  margin-bottom: 59px;
 }
-.future__heading-titl {
+.checkout__block-title {
   font-family: Lato;
-  font-size: 30px;
-  font-weight: 700;
-  letter-spacing: 0.025em;
+  font-size: 12px;
+  line-height: 20px;
+  font-weight: 400;
   color: #222222;
 }
-.future__heading-text {
-  font-family: Lato;
-  font-size: 14px;
-  font-weight: 400;
-  letter-spacing: 0.025em;
-  color: #9f9f9f;
+.checkout__block-input {
+  width: 390px;
+  height: 45px;
+  background-color: #ffffff;
+  border: 1px solid #eaeaea;
 }
-.future__main {
-  display: grid;
-  gap: 30px;
-  grid-template-columns: repeat(auto-fit, 261px);
-}
-.future__block {
-  position: relative;
-}
-.future__block:hover {
-  box-shadow: 8px 5px 8px 0px rgba(0, 0, 0, 0.15);
-}
-.future__block:hover .future__photo {
-  filter: brightness(30%);
-}
-.future__block:hover .future__hover-button {
-  display: flex;
-}
-.future__link {
-  display: flex;
-  gap: 19px;
-  flex-direction: column;
-}
-.future__photo {
-  width: 100%;
-  height: 100%;
-}
-.future__block-text {
-  display: flex;
-  gap: 17px;
-  flex-direction: column;
-  margin-left: 14px;
-  margin-bottom: 30px;
-}
-.future__block-title {
-  font-family: Lato;
-  font-size: 13px;
-  font-weight: 400;
-  text-transform: uppercase;
-  color: #222222;
-}
-.future__block-price {
-  font-family: Lato;
-  font-size: 16px;
-  font-weight: 700;
-  text-transform: uppercase;
+.checkout__existing-block:hover .checkout__block-title {
   color: #f16d7f;
 }
-.future__hover-button {
-  position: absolute;
-  top: 98px;
-  display: none;
-  justify-content: center;
-  width: 100%;
-  pointer-events: none;
+.checkout__existing-color {
+  color: #f16d7f;
 }
-.future__hover-link {
-  display: flex;
-  align-items: center;
-  gap: 8px;
-  padding: 10px;
-  text-decoration: none;
-  border: 1px solid #ffffff;
-  pointer-events: all;
-}
-.future__hover-link:hover {
-  box-shadow: 0 0 8px 0 #ffffff;
-}
-.future__hover-text {
+.checkout__requared {
   font-family: Lato;
   font-size: 13px;
+  line-height: 20px;
+  font-weight: 400;
+  color: #ff0d0d;
+}
+.checkout__existing-button {
+  display: flex;
+  gap: 32px;
+  margin-top: 32px;
+  align-items: center;
+}
+.checkout__existing-submit {
+  padding: 19px 55px;
+  background-color: #ffffff;
+  border: 1px solid #eaeaea;
+  font-family: Lato;
+  font-size: 14px;
   line-height: 1.2;
   font-weight: 700;
+  text-transform: uppercase;
+  color: #4a4a4a;
+  transition: all 0.5s;
+}
+.checkout__existing-submit:hover {
   color: #ffffff;
+  background: #f16d7f;
 }
-.future__button {
-  display: flex;
-  justify-content: center;
-  margin-top: 30px;
-}
-.future__push {
-  width: 212px;
-  height: 48px;
-  background-color: #f16d7f;
-  border: none;
-  display: flex;
-  gap: 9px;
-  justify-content: center;
-  align-items: center;
-}
-.future__push-text {
-  font-family: Lato;
-  font-size: 16px;
-  font-weight: 700;
-  letter-spacing: 0.025em;
-  color: #ffffff;
-}
-.future__push-img {
-  fill: #ffffff;
-  font-size: 15px;
-  font-weight: 400;
-}
-.future__push:hover {
-  background: #ffffff;
-  border: 1px solid #e6e6e6;
-  transition: all 0.3s;
-}
-.future__push:hover .future__push-text {
-  color: #f16d7f;
-  transition: all 0.3s;
-}
-.future__push:hover .future__push-img {
-  fill: #f16d7f;
-  transition: all 0.3s;
-}
-
-.guaranties {
-  padding-bottom: 97px;
-  display: flex;
-}
-.guaranties__photo {
-  height: 529px;
-}
-.guaranties__articles {
-  min-width: 373px;
-  height: 529px;
-  background-color: #222224;
-}
-.guaranties__block {
-  margin-left: 36px;
-  display: flex;
-  gap: 33px;
-  align-items: flex-start;
-  padding-top: 48px;
-  margin-bottom: 2px;
-  transition: all 2s;
-}
-.guaranties__text {
-  width: 219px;
-  display: flex;
-  gap: 17px;
-  flex-direction: column;
-}
-.guaranties__title {
-  font-family: Lato;
-  font-size: 20px;
-  font-weight: 700;
-  letter-spacing: 0.025em;
-  color: #fbfbfb;
-}
-.guaranties__description {
+.checkout__existing-link {
   font-family: Lato;
   font-size: 14px;
-  line-height: 24px;
-  font-weight: 300;
-  letter-spacing: 0.025em;
-  color: #fbfbfb;
+  line-height: 20px;
+  font-weight: 400;
+  color: #222222;
 }
-.guaranties__block:hover .guaranties__img {
-  filter: drop-shadow(3px 3px 3px #f16d7f);
-  transition: all 0.5s;
+.checkout__existing-link:hover {
+  color: #f16d7f;
 }
-.guaranties__block:hover .guaranties__title {
-  filter: drop-shadow(3px 3px 3px white);
-  transition: all 0.5s;
+.checkout__text {
+  font-family: Lato;
+  font-size: 14px;
+  line-height: 20px;
+  font-weight: 400;
+  color: #222222;
+  margin-top: 39px;
 }
 
 .subscription {
@@ -949,4 +947,4 @@
 }
 .footer__block:hover svg path {
   fill: #ffffff;
-}/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=style4.css.map */
