--- a/style4.scss
+++ b/style4.scss
@@ -57,7 +57,8 @@ $colorBrend: #f16d7f;
         }
 
         &[open] .header__searche-img{
-            fill: $colorBrend
+            fill: $colorBrend;
+            transform: rotate(180deg);
         }
     }
 
@@ -267,7 +268,7 @@ $colorBrend: #f16d7f;
 
         &[open] .header__right-img{
             fill: $colorBrend;
-            // transform: rotate(180deg);
+            transform: rotate(180deg);
         }
 
         &[open] .header__right-button{
@@ -536,6 +537,8 @@ $colorBrend: #f16d7f;
         box-shadow: 3px 3px 3px 1px grey;
     }
 
+  
+
     &__last:hover &__container{
         right: 0;
         left: auto;
@@ -622,394 +625,276 @@ $colorBrend: #f16d7f;
 
 }
 
-.slider{
-    display: flex;
-    justify-content: center;
-    position: relative;
-    background-image: url(./img_single_page/background.png);
-    background-size: cover;
-    border: 1px solid #eaeaea;
-   
+.checkout{
+padding-top: 89px;
+padding-bottom: 93px;
 
-    &__photo{
-        display: flex;
-        justify-content: center;  
-    }
-   
+    &__details{
+        border-bottom: 1px solid  #e8e8e8;
+        padding-top: 33px;
+        padding-bottom: 31px;
 
-    &__img{
-        margin-top: 11px;
-        margin-bottom: 42px;
-    }
-
-    &__select{
-        background-color: #ffffff;
-        border: 1px solid #eaeaea;
-        margin-top: 691px;
-        position: absolute;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-
-    }
-
-    &__description{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        margin-top: 73px;
-        max-width: 642px;
-        border-bottom: 1px solid #eaeaea;
-        margin-left: 250px;
-        margin-right: 250px;
-    }
-
-    &__categry{
-        font-family: Lato;
-        font-size: 14px;
-        line-height: 24px;
-        font-weight: 700;
-        color: #f16d7f;
-        margin-bottom: 14px;
-    }
-
-    &__title{
-        margin-top: 17px;
-        margin-bottom: 67px;
-
-        font-family: Lato;
-        font-size: 18px;
-        line-height: 24px;
-        font-weight: 900;
-        text-transform: uppercase;
-        color: #4d4d4d;
-    }
-
-    &__text{
-        font-family: Lato;
-        font-size: 14px;
-        line-height: 24px;
-        font-weight: 300;
-        color: #5e5e5e;
-        text-align: center;
-        margin-bottom: 28px;
-    }
-
-    &__inform{
-        display: flex;
-        gap: 44px;
-        margin-bottom: 37px;
-    }
-
-    &__data{
-        font-family: Lato;
-        font-size: 14px;
-        line-height: 24px;
-        font-weight: 700;
-        color: #b9b9b9;
-    }
-
-    &__color{
-        font-family: Lato;
-        font-size: 14px;
-        line-height: 24px;
-        font-weight: 700;
-        color: #2f2f2f;
-    }
-
-    &__price{
-        font-family: Lato;
-        font-size: 24px;
-        line-height: 24px;
-        font-weight: 700;
-        color: #ef5b70;
-        margin-bottom: 43px;
-    }
-
-    &__filter{
-        margin-top: 63px;
-        margin-bottom: 28px;
-        display: flex;
-        gap: 53px;
-    }
-
-    &__filter-title{
-        font-family: Lato;
-        font-size: 14px;
-        line-height: 24px;
-        font-weight: 700;
-        color: #2f2f2f;
-        margin-bottom: 16px;
+        &[open]{
+            color: $colorBrend;
+        }
     }
 
     &__details{
-        display: flex;
-        background-color: #ffffff;
-        border: 1px solid #eaeaea;
-        width: 144px;
+       
+        &[open]  .checkout__summary-num{
+            color: #ef5b70;
+         }
+ 
+         &[open]  .checkout__summary-title{
+             color: #ef5b70;
+          }
     }
-
-    &__details{
-        &[open] .slider__summary-text{
-            color: $colorBrend
-        }
-
-        &[open] .slider__summary-icon{
-            fill: $colorBrend
-        }
-
-        &[open] .slider__summary-size{
-            color: $colorBrend
-        }
-    }
-
 
     &__summary{
         display: flex;
-        align-items: center;
-        justify-content: space-between;
-        margin: 9px 15px
-    }
+        gap: 10px;
 
-    &__left{
-        display: flex;
-        gap: 11px;
-        align-items: center;
-        margin-right: 55px;
-    }
-
-    &__square{
-        display: block;
-        width: 12px;
-        height: 12px;
-        background-color: #ef5b70;
-    }
-
-    
-
-    &__summary-text{
-        font-family: Lato;
-        font-size: 13px;
-        font-weight: 400;
-        color: #bcbcbc;
-        
-    }
-
-    &__summary-icon{
-        font-family: 'Font Awesome';
-        font-size: 14px;
-        line-height: 23px;
-        font-weight: 400;
-        fill: #bcbcbc;
-    }
-
-    &__summary-size{
-        font-family: Lato;
-        font-size: 13px;
-        font-weight: 400;
-        color: #bcbcbc;
-        margin-right: 75px;
-    }
-
-
-    &__field{
-        width: 127px;
-        height: 33px;
-        display: flex;
-        padding-left: 15px;
-        background-color: #ffffff;
-        border: 1px solid #eaeaea;
-
-        font-family: Lato;
-        font-size: 14px;
-        line-height: 24px;
-        font-weight: 400;
-        color: #bcbcbc;
-    }
-
-    &__button{
-        display: flex;
-        // gap: 15px;
-        justify-content: center;
-        margin-bottom: 122px;
-    }
-            
-    &__link{
-        display: flex;
-        align-items: center;
-        gap: 15px;
-        padding: 22px 206px;
-        text-decoration: none;
-        background-color: #ffffff;
-        border: 1px solid #ef5b70;
-    }
-
-    &__icon{
-        fill:#ef5b70;
-    }
-    
-    &__button-text{
         font-family: Lato;
         font-size: 16px;
         line-height: 1.2;
         font-weight: 700;
-        color: #ef5b70;
-        
-    }
-
-    &__link:hover{
-        background:  #ef5b70;
-        transition: all 0.5s;
-    }
-    
-
-    &__link:hover .slider__icon{
-        fill: #FFFFFF;
-        transition: all 0.5s;
-    
-    }
-
-    &__link:hover .slider__button-text{
-        color: #FFFFFF;
-        transition: all 0.5s;
-    }
-         
-}
-
-.stick{
-    display: flex;
-    justify-content: center;
-
-    &__full{
-        width: 147px;
-        height: 1px;
-        background-color: #eaeaea;
-        border: 1px solid #eaeaea;
-        position: relative;
-    }
-
-    &__center{
-        width: 63px;
-        height: 3px;
-        background-color: #ef5b70;
-        position: absolute;
-    }
-}
-
-
-
-.future{
-
-    padding-top: 860px;
-    padding-bottom: 73px;
-
-    &__heading{
-        font-family: Lato;
-        font-size: 24px;
-        line-height: 35px;
-        font-weight: 900;
         text-transform: uppercase;
-        color: #4d4d4d;
-        margin-bottom: 72px;
-        text-align: center;
+        color: #222222;
     }
 
-     &__main{
-        display: grid;
-        gap: 30px;
-        grid-template-columns: repeat(auto-fit, 261px);
+    &__summary:hover{
+        color: $colorBrend;
     }
 
-    &__block{
-        position: relative;
-   
-    }
-
-    &__picture{
-        width: 261px;
-        height: 280px;
-        background-color: #e9e9e9;
+    &__box{
+        padding: 39px 35px 79px 35px;
         display: flex;
-        justify-content: center;
+        justify-content: space-between;
     }
 
-   
-
-     &__block:hover{
-        box-shadow: 8px 5px 8px 0px rgba(0, 0, 0, 0.15);
-    }
-
-    &__block:hover &__picture{
-        filter: brightness(30%);
-    }
-
-    &__block:hover &__hover-button{
-       display: flex;
-    }
-
-    &__link{
-        display: flex;
-        gap: 18px;
-        flex-direction: column;
-    }
-
-     &__block-text{
-        display: flex;
-        gap: 17px;
-        flex-direction: column;
-        margin-left: 15px;
-        margin-bottom: 21px;
-    }
-
-    &__block-title{
+    &__guest-title{
         font-family: Lato;
         font-size: 13px;
+        line-height: 1.2;
+        font-weight: 400;
+        text-transform: uppercase;
+        color: #222222;
+        margin-bottom: 15px;
+    }
+
+    &__guest-text{
+        font-family: Lato;
+        font-size: 13px;
+        line-height: 20px;
+        font-weight: 400;
+        color: #b3b2b2;
+    }
+
+    &__radio-box{
+        display: flex;
+        gap: 20px;
+        flex-direction: column;
+        margin-top: 34px;
+        margin-bottom: 33px;
+    }
+
+    &__radio{
+        display: flex;
+        gap: 14px;
+    }
+
+    &__radio-input{
+        width: 14px;
+        height: 14px;
+        background-color: #ffffff;
+        border: 2px solid #555555;
+    }
+
+    &__radio-label{
+        font-family: Lato;
+        font-size: 12px;
+        line-height: 1.2;
         font-weight: 400;
         text-transform: uppercase;
         color: #222222;
     }
 
-    &__block-price{
+    &__radio:hover &__radio-label{
+        color: $colorBrend;
+    }
+
+    &__guest-links{
+        display: flex;
+        gap: 15px;
+        flex-direction: column;
+
+        margin-top: 33px;
+        margin-bottom: 38px;
+    }  
+
+    &__guest-link{
+        display: flex;
+        gap: 4px;
+        align-items: center;
+    }
+
+    &__guest-icon{
+        fill: #b3b2b2;
+        width: 13px;
+        height: 13px;
+    }
+
+
+    &__guest-description{
         font-family: Lato;
-        font-size: 16px;
+        font-size: 13px;
+        line-height: 20px;
+        font-weight: 400;
+        color: #b3b2b2;
+    }
+
+    &__guest-link:hover &__guest-icon{
+        fill: $colorBrend;
+    }
+
+    &__guest-link:hover &__guest-description{
+        color: $colorBrend;
+    }
+
+
+    &__guest-button{
+        background-color: #ffffff;
+        border: 1px solid #eaeaea;
+
+        font-family: Lato;
+        font-size: 14px;
+        line-height: 1.2;
         font-weight: 700;
         text-transform: uppercase;
-        color:$colorBrend;
+        color: #4a4a4a;
+
+        padding: 19px 54px;
+        transition: all 0.5s;
     }
 
-    &__hover-button{
-        position: absolute;
-        top: 98px;
-        display: none;
-        justify-content: center;
-        width: 100%;
-        pointer-events: none;
-    }
-            
-    &__hover-link{
-        display: flex;
-        align-items: center;
-        gap: 8px;
-        padding: 10px;
-        text-decoration: none;
-        border: 1px solid #ffffff;
-        pointer-events: all;
+    &__guest-button:hover{
+        color: #ffffff;
+        background-color: $colorBrend;
     }
 
-    &__hover-link:hover{
-        box-shadow: 0 0 8px 0 #ffffff;
-    }
-    
-    &__hover-text{
+    &__existing-title{
         font-family: Lato;
         font-size: 13px;
         line-height: 1.2;
+        font-weight: 400;
+        text-transform: uppercase;
+        color: #222222;
+        margin-bottom: 15px;
+    }
+
+    &__existing-text{
+        font-family: Lato;
+        font-size: 13px;
+        line-height: 20px;
+        font-weight: 400;
+        color: #b3b2b2;
+    }
+
+    &__existing-box{
+        margin-top: 27px;
+        margin-bottom: 22px;
+        display: flex;
+        flex-direction: column;
+        gap: 23px;
+    }
+
+    &__existing-block{
+        display: flex;
+        gap: 16px;
+        flex-direction: column;
+    }
+
+    &__block-title{
+        font-family: Lato;
+        font-size: 12px;
+        line-height: 20px;
+        font-weight: 400;
+        color: #222222;
+    }
+
+    &__block-input{
+        width: 390px;
+        height: 45px;
+        background-color: #ffffff;
+        border: 1px solid #eaeaea;
+    }
+
+    &__existing-block:hover &__block-title{
+        color:$colorBrend;
+    }
+
+
+    &__existing-color{
+        color: $colorBrend;
+    }
+
+    &__requared{
+        font-family: Lato;
+        font-size: 13px;
+        line-height: 20px;
+        font-weight: 400;
+        color: #ff0d0d;
+    }
+
+    &__existing-button{
+        display: flex;
+        gap: 32px;
+        margin-top: 32px;
+        align-items: center;
+    }
+
+
+    &__existing-submit{
+        padding: 19px 55px;
+        background-color: #ffffff;
+        border: 1px solid #eaeaea;
+
+        font-family: Lato;
+        font-size: 14px;
+        line-height: 1.2;
         font-weight: 700;
+        text-transform: uppercase;
+        color: #4a4a4a;
+        transition: all 0.5s;
+    }
+
+    &__existing-submit:hover{
         color: #ffffff;
+        background: $colorBrend;
+    }
+
+    &__existing-link{
+        font-family: Lato;
+        font-size: 14px;
+        line-height: 20px;
+        font-weight: 400;
+        color: #222222;
+    }
+
+    &__existing-link:hover {
+        color:$colorBrend;
+    }
+
+    &__text{
+        font-family: Lato;
+        font-size: 14px;
+        line-height: 20px;
+        font-weight: 400;
+        color: #222222;
+        margin-top: 39px;
     }
 }
 
-   
 .subscription {
     background-image: url(./img2/background-subscription.png);
     height: 438px;
@@ -1269,6 +1154,3 @@ $colorBrend: #f16d7f;
         fill: #ffffff;
     }
 }
-    
-
-   
